--- a/index.html
+++ b/index.html
@@ -21,13 +21,26 @@
           </div>
         </div>
         <div class="row row-form">
-          <h1 class="form-title">Сделай шаг к&nbsp;выздоровлению</h1>
+          <h1 class="form-title">Сделай шаг <br />к&nbsp;выздоровлению</h1>
           <form action="#" method="post" class="form-order">
             <label for="">ваше <span>имя</span></label>
-            <input type="text" name="name" id="name" class="name" placeholder="Алексей" />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="name"
+              placeholder="Алексей"
+            />
             <label for="">ваш <span>телефон</span></label>
             <div class="phone-group">
-              <input type="text" name="name" id="phone" class="phone-number" placeholder="+7 (123) 456 78-90" pattern="2 ([0-9]{3}) [0-9]{3} [0-9]{2}-[0-9]{2}"/>
+              <input
+                type="text"
+                name="name"
+                id="phone"
+                class="phone-number"
+                placeholder="+7 (123) 456 78-90"
+                pattern="2 ([0-9]{3}) [0-9]{3} [0-9]{2}-[0-9]{2}"
+              />
               <div class="country-group">
                 <input
                   type="text"
@@ -53,27 +66,17 @@
                 </ul>
               </div>
             </div>
-            <!-- <select name="country-phone" id="country-phone" class="country-phone">
-              <option value="+7">
-                RU
-                <span>
-                  <svg class="icon-social">
-                    <use xlink:href="img/icon-ru.svg#ru"></use>
-                  </svg>
-                </span>
-              </option> -->
-            <!-- </select> -->
             <button type="submit">Заказать</button>
           </form>
         </div>
       </div>
       <div class="secure">
-          <span>Trusted</span>
-          <span>
-            <img src="img/lock.svg" alt="lock" srcset="">
-          </span>
-          <span>Secure</span>
-        </div>
+        <span>Trusted</span>
+        <span>
+          <img src="img/lock.svg" alt="lock" srcset="" />
+        </span>
+        <span>Secure</span>
+      </div>
     </div>
   </body>
 </html>
